# eth-lez-atomic-swaps

./: .clangd  .env.example  .gitignore  ADR.md  AGENTS.md  Cargo.toml  FURPS.md  Makefile  README.md  cold-clone-checklist.md  cspell.json  delivery-dogfooding.md  demo-script.md  docker-compose.yml  furps.md  insights.md  plan.md  result-basecamp  scaffold.toml  upstream-issues.md
.cargo/: config.toml
.cursor/rules/: logos.mdc
.sisyphus/run-continuation/: ses_1f87e318cffeJ6mzcqqMHmsuQu.json  ses_1f8891823ffeDdQCbV6NzqKCnT.json  ses_1f89a41e4ffeMeCNtNHexiGx4s.json  ses_1f89eccbaffer3ODTOL3aorVMF.json  ses_1f8a3d62effeGX5ImPCmrUqzL3.json  ses_1f8bac936ffegsivFNdxkzYQ86.json  ses_1f8c4101dffeJjnAOu70rbNtsv.json
configs/: test_sequencer.json
contracts/: .env.example  foundry.toml
contracts/script/: DeployEthHTLC.s.sol
contracts/src/: EthHTLC.sol
contracts/test/: EthHTLC.t.sol
docs/: lsp.md  scaffold-phase-1-validation.md  scaffold-upgrade-plan.md  scaffold-upstream-tracker.md
logos-module/: CMakeLists.txt  metadata.json  metadata_app.json
logos-module/include/: i_lez_atomic_swap_module.h
logos-module/qml/: AtomicSwapView.qml  ConfigPanel.qml  MakerView.qml  RefundView.qml  TakerView.qml
logos-module/src/: icomponent_adapter.cpp  lez_atomic_swap_module.cpp  lez_atomic_swap_module.h  main.cpp  plugin.cpp  swap_backend.cpp  swap_backend.h
programs/lez-htlc/methods/: Cargo.toml
programs/lez-htlc/methods/guest/: Cargo.toml
programs/lez-htlc/methods/guest/src/: lib.rs  main.rs
scripts/: basecamp-instance.sh  local-setup.sh
src/: config.rs  demo.rs  error.rs  lib.rs  scaffold.rs
src/cli/: demo.rs  infra.rs  maker.rs  mod.rs  output.rs  refund.rs  status.rs  taker.rs
src/eth/: client.rs  mod.rs  watcher.rs
src/lez/: client.rs  watcher.rs
src/messaging/: client.rs  mod.rs  node.rs  sender.rs  topics.rs  types.rs
src/swap/: maker.rs  mod.rs  progress.rs  refund.rs  taker.rs  types.rs
swap-ffi/: Cargo.toml  build.rs  cbindgen.toml
swap-ffi/include/: swap_ffi.h
swap-ffi/src/: lib.rs
swap-module/: CMakeLists.txt  flake.nix  metadata.json
swap-module/lib/: .gitignore  README.md  swap_ffi.h
swap-module/src/: swap_delivery_adapter.cpp  swap_delivery_adapter.h  swap_impl.cpp  swap_impl.h
swap-module/tests/: CMakeLists.txt  test_swap.cpp
swap-module/tests/mocks/: mock_swap_ffi.cpp
swap-ui/: CMakeLists.txt  flake.nix  metadata.json
swap-ui/reference/: LEGACY_BACKEND_MAPPING.md
swap-ui/reference/legacy-qml/: ConfigPanel.qml  Main.qml  ProgressStepper.qml  RefundView.qml  ResultCard.qml  TakerView.qml
swap-ui/src/: swap_ui.rep  swap_ui_interface.h  swap_ui_plugin.cpp  swap_ui_plugin.h
swap-ui/src/qml/: AtomicSwapView.qml  ConfigPanel.qml  Main.qml  MakerView.qml  ProgressStepper.qml  RefundView.qml  ResultCard.qml  TakerView.qml  Theme.qml
swap-ui/tests/: smoke.mjs
tests/: e2e_swap.rs  eth_integration.rs  lez_integration.rs  messaging_integration.rs  print_config.rs
ui/: CMakeLists.txt  Makefile
ui/qml/: ConfigPanel.qml  Main.qml  MakerView.qml  RefundView.qml  ResultCard.qml  TakerView.qml  Theme.qml
ui/src/: main.cpp  swapbackend.cpp  swapbackend.h
