[package]
name = "swap-orchestrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "swap-cli"
path = "src/bin/cli.rs"

[dependencies]
# Ethereum
alloy = { version = "1", features = [
    "provider-ws",
    "signer-local",
    "contract",
    "sol-types",
    "network",
    "rpc-types",
    "node-bindings",
] }
futures-util = "0.3"

# LEZ
nssa = { git = "https://github.com/logos-blockchain/lssa", rev = "6ca020d5" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa", rev = "6ca020d5", features = ["host"] }
common = { git = "https://github.com/logos-blockchain/lssa", rev = "6ca020d5" }
# LEZ HTLC types (HTLCInstruction, HTLCEscrow, HTLCState)
lez_htlc_program = { path = "programs/lez-htlc/methods/guest" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }

# Crypto
sha2 = "0.10"
rand = { version = "0.8", features = ["std", "std_rng"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Environment
dotenvy = "0.15"

# URL parsing
url = "2"

# Utilities
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = "1.5"

# Messaging (nwaku REST API)
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2"

# Demo-only dependencies (behind `demo` feature flag)
sequencer_runner = { git = "https://github.com/logos-blockchain/lssa", rev = "6ca020d5", optional = true }
sequencer_core = { git = "https://github.com/logos-blockchain/lssa", rev = "6ca020d5", features = ["testnet"], optional = true }
lez_htlc_methods = { path = "programs/lez-htlc/methods", optional = true }
tempfile = { version = "3", optional = true }
jsonrpsee = { version = "0.26", features = ["server"], optional = true }

[features]
demo = [
    "dep:sequencer_runner",
    "dep:sequencer_core",
    "dep:lez_htlc_methods",
    "dep:jsonrpsee",
    "dep:tempfile",
    "alloy/provider-anvil-node",
]

[dev-dependencies]
alloy = { version = "1", features = [
    "provider-ws",
    "signer-local",
    "contract",
    "sol-types",
    "network",
    "rpc-types",
    "node-bindings",
    "provider-anvil-node",
] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "test-util"] }

# LEZ test sequencer
sequencer_runner = { git = "https://github.com/logos-blockchain/lssa", rev = "6ca020d5" }
sequencer_core = { git = "https://github.com/logos-blockchain/lssa", rev = "6ca020d5", features = ["testnet"] }
lez_htlc_methods = { path = "programs/lez-htlc/methods" }
tempfile = "3"
jsonrpsee = { version = "0.26", features = ["server"] }
