[package]
name = "swap-orchestrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "swap-cli"
path = "src/bin/cli.rs"

[dependencies]
# Ethereum
alloy = { version = "1", features = [
    "provider-ws",
    "signer-local",
    "contract",
    "sol-types",
    "network",
    "rpc-types",
    "node-bindings",
] }
futures-util = "0.3"

# LEZ
nssa = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f", features = ["host"] }
common = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f" }
wallet = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f", features = ["client"] }
sequencer_service_protocol = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f" }
# LEZ HTLC types (HTLCInstruction, HTLCEscrow, HTLCState)
lez_htlc_program = { path = "programs/lez-htlc/methods/guest" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }

# Crypto
sha2 = "0.10"
rand = { version = "0.8", features = ["std", "std_rng"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Environment
dotenvy = "0.15"

# URL parsing
url = "2"

# Utilities
base58 = "0.2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = "1.5"

# Messaging (Logos delivery — embedded waku node via libwaku FFI)
waku-bindings = { git = "https://github.com/logos-messaging/logos-delivery-rust-bindings", rev = "95040402feae4ebc3038d66e1168390669bd6942" }
multiaddr = "0.17"

# Demo-only dependencies (behind `demo` feature flag)
lez_htlc_methods = { path = "programs/lez-htlc/methods", optional = true }

[features]
demo = [
    "dep:lez_htlc_methods",
    "alloy/provider-anvil-node",
]

[dev-dependencies]
alloy = { version = "1", features = [
    "provider-ws",
    "signer-local",
    "contract",
    "sol-types",
    "network",
    "rpc-types",
    "node-bindings",
    "provider-anvil-node",
] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "test-util"] }

lez_htlc_methods = { path = "programs/lez-htlc/methods" }
serial_test = "3"
