[package]
name = "swap-orchestrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "swap-cli"
path = "src/bin/cli.rs"

[dependencies]
# Ethereum
alloy = { version = "1", features = [
    "provider-ws",
    "signer-local",
    "contract",
    "sol-types",
    "network",
    "rpc-types",
    "node-bindings",
] }
futures-util = "0.3"

# LEZ
nssa = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f", features = ["host"] }
common = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f" }
wallet = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f" }
sequencer_service_rpc = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f", features = ["client"] }
sequencer_service_protocol = { git = "https://github.com/logos-blockchain/lssa", rev = "9fa541f" }
# LEZ HTLC types (HTLCInstruction, HTLCEscrow, HTLCState)
lez_htlc_program = { path = "programs/lez-htlc/methods/guest" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }

# Crypto
sha2 = "0.10"
rand = { version = "0.8", features = ["std", "std_rng"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Environment
dotenvy = "0.15"

# URL parsing
url = "2"

# Utilities
base58 = "0.2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
borsh = "1.5"

# Messaging (Logos delivery — embedded waku node via libwaku FFI)
waku-bindings = { git = "https://github.com/logos-messaging/logos-delivery-rust-bindings", rev = "95040402feae4ebc3038d66e1168390669bd6942" }
multiaddr = "0.17"
secp256k1 = { version = "0.26", features = ["rand"] }
# Pin rln to exactly 0.3.4 so cargo applies the [patch.crates-io] entry below
# (which only matches version 0.3.4). Without this pin, cargo selects rln 0.3.5+
# from crates.io and the patch is silently ignored. We don't use rln directly —
# this dep exists solely to anchor the version for the patch.
rln = "=0.3.4"

# Demo-only dependencies (behind `demo` feature flag)
lez_htlc_methods = { path = "programs/lez-htlc/methods", optional = true }

[features]
demo = [
    "dep:lez_htlc_methods",
    "alloy/provider-anvil-node",
]

[dev-dependencies]
alloy = { version = "1", features = [
    "provider-ws",
    "signer-local",
    "contract",
    "sol-types",
    "network",
    "rpc-types",
    "node-bindings",
    "provider-anvil-node",
] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "test-util"] }

lez_htlc_methods = { path = "programs/lez-htlc/methods" }
serial_test = "3"

# rln 0.3.4 (transitive dep of waku-bindings) pins ark-serialize =0.4.1
# exactly, which conflicts with our LEZ deps' ark-serialize ^0.4.2.
# Locally vendored copy of rln 0.3.4 with that one constraint relaxed to
# ark-serialize ^0.4. See delivery-dogfooding.md.
[patch.crates-io]
# rln is vendored as an empty stub — see vendor/rln-patched/src/lib.rs.
rln = { path = "vendor/rln-patched" }
# core2 0.4.0 is yanked but still required by multihash 0.17 (transitive
# dep of multiaddr 0.17 from waku-bindings). Vendored locally to bypass
# cargo's yanked-version refusal during fresh resolves.
core2 = { path = "vendor/core2-vendored" }
