[package]
name = "swap-ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
swap-orchestrator = { path = ".." }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
alloy = { version = "1", features = ["signers", "signer-local", "providers"] }
alloy-primitives = "1"
dotenvy = "0.15"
sha2 = "0.10"
rand = { version = "0.8", features = ["std", "std_rng"] }

[build-dependencies]
cbindgen = "0.27"
