[package]
name = "lez_htlc_program"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa_core = { git = "https://github.com/logos-blockchain/lssa", branch = "main" }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
lez-framework = { git = "https://github.com/jimmy-claw/nssa-framework.git" }
